--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,9 @@
         "sonata-project/notification-bundle": "^3.0",
         "sonata-project/dashboard-bundle": "^0.1.0",
         "sonata-project/datagrid-bundle": "^2.2",
-        "stfalcon/tinymce-bundle": "1.0"
+        "stfalcon/tinymce-bundle": "1.0",
+        "codeception/codeception": "^2.2",
+        "symfony/assetic-bundle": "^2.8"
     },
     "require-dev": {
         "sensio/generator-bundle": "~3.0",
