++form( but no validating)

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,6 +1,9 @@
 app:
     resource: "@AppBundle/Controller/"
     type:     annotation
+feedback:
+    resource: "@AppBundle/Controller/FeedbackController.php"
+    type: rest
 sonata_cache_cache:
     resource: '@SonataCacheBundle/Resources/config/routing/cache.xml'
     prefix: /
