--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -10,7 +10,6 @@ parameters:
 
 framework:
 #    esi:             ~
-
     translator:      { fallbacks: ["%locale%"] }
     secret:          "%secret%"
     router:
@@ -143,17 +142,12 @@ sonata_block:
         sonata.user.block.menu:
         sonata.user.block.account:
         sonata.block.service.text:
-#fos_rest:
-#    routing_loader:
-#        default_format: json
-#    param_fetcher_listener: true
-#    body_listener: true
-#    format_listener:
-#        rules:
-#            # render "/api" requests as json
-#            - { path: ^/api, priorities: [ json ], fallback_format: json, prefer_extension: true }
-#            # default, fallback rendering twig templates
-#            - { path: ^/, priorities: ['html', 'application/javascript', 'text/css', '*/*'], fallback_format: html, prefer_extension: true }
+fos_rest:
+    routing_loader:
+        default_format: json
+    view:
+        view_response_listener: force
+
 fos_user:
     db_driver:      orm
     firewall_name:  main
