--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -24,3 +24,15 @@ services:
         arguments: [~, AppBundle\Entity\Actor, AppBundle:ActorAdmin]
         tags:
             - { name: sonata.admin, manager_type: orm, group: Entities, label: Actor }
+
+    app.admin.movie_quality:
+        class: AppBundle\Admin\MovieQualityAdmin
+        arguments: [~, AppBundle\Entity\MovieQuality, AppBundle:MovieQualityAdmin]
+        tags:
+            - { name: sonata.admin, manager_type: orm, group: Entities, label: MovieQuality }
+
+    app.admin.feedback_record:
+        class: AppBundle\Admin\FeedbackRecordAdmin
+        arguments: [~, AppBundle\Entity\FeedbackRecord, AppBundle:FeedbackRecordAdmin]
+        tags:
+            - { name: sonata.admin, manager_type: orm, group: Dot-44, label: FeedbackRecord }
