--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,13 +1,15 @@
+proxy:
+    resource: "@ProxyBundle/Resources/config/routing.yml"
+    prefix:   /
+
 app_book_api:
     resource: "@AppBundle/Controller/BookRESTController.php"
     type:   rest
     prefix:   /api
-
 app_author_api:
     resource: "@AppBundle/Controller/AuthorRESTController.php"
     type:   rest
     prefix:   /api
-
 app:
     resource: "@AppBundle/Controller/"
     type:     annotation
