extended guzzle-proxy bundle convert's to separate one due inheritance lack's

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -165,9 +165,10 @@ nelmio_cors:
             max_age: 3600
 
 sensio_framework_extra:
-    request: { converters: true }
+    request: { converters: true, auto_convert: true }
     view:    { annotations: false }
     router:  { annotations: true }
+#    psr_message: { enabled: true }
 
 fos_user:
     db_driver:      orm
@@ -184,7 +185,7 @@ sonata_dashboard:
     class:
         dashboard: Application\Sonata\DashboardBundle\Entity\Dashboard
         block:     Application\Sonata\DashboardBundle\Entity\Block
-bangpound_guzzle_proxy:
+proxy:
     endpoints:
         httpbin:
             base_uri: 'http://httpbin.org/'
