--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,8 @@
         "symfony/assetic-bundle": "^2.8",
         "react/react": "^0.4.2",
         "voryx/restgeneratorbundle": "dev-master",
-        "bangpound/guzzle-proxy-bundle": "2.0.x-dev"
+        "symfony/psr-http-message-bridge": "^1.0",
+        "zendframework/zend-diactoros": "^1.3"
     },
     "require-dev": {
         "sensio/generator-bundle": "~3.0",
