--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,8 @@
         "stfalcon/tinymce-bundle": "1.0",
         "codeception/codeception": "^2.2",
         "symfony/assetic-bundle": "^2.8",
-        "react/react": "^0.4.2",
+        "react/react": "*",
+        "react/http":"*",
         "voryx/restgeneratorbundle": "dev-master",
         "symfony/psr-http-message-bridge": "^1.0",
         "zendframework/zend-diactoros": "^1.3"
